# Bachelorarbeit-Extraction

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
Visualisierung/: .gitignore  main.py  pyproject.toml
frontend/: .prettierrc.toml  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  index.scss  index.tsx
server/: pyproject.toml
server/urteile_server/: main.py
spacy-legal-ner/: base_config.cfg  config.cfg  init.ps1  train.ps1  train.py
stats/: README.md  eval.py  find_best_f1.py  info.py  pyproject.toml
stats/gold/: 215971.gold.json  317604.gold.json  325660.gold.json  326019.gold.json  329787.gold.json  330270.gold.json  330285.gold.json  332499.gold.json  332795.gold.json  332871.gold.json
