[tool.poetry]
name = "stats"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"

# Plot
matplotlib = "^3.4.2"
scikit-learn = "^1.0.0"
scipy = "^1.7.1"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
